--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@ THEME=https://raw.githubusercontent.com/cannibalox/Obsdn-dark-rmx/HEAD/obsidian.
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=true
+dgShowBacklinks=false
 dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
