--- a/.env
+++ b/.env
@@ -12,11 +12,11 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/cannibalox/Obsdn-dark-rmx/HEAD/obsidian.css
+THEME=https://raw.githubusercontent.com/sainadh-d/obsidian-boom/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=false
+dgShowBacklinks=true
 dgShowLocalGraph=false
 dgShowInlineTitle=true
 dgShowFileTree=true
