--- a/.env
+++ b/.env
@@ -12,12 +12,12 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=
 STYLE_SETTINGS_BODY_CLASSES=
 USE_FULL_RESOLUTION_IMAGES=false
-THEME=https://raw.githubusercontent.com/bennyxguo/Obsidian-Obsidianite/HEAD/theme.css
+THEME=https://raw.githubusercontent.com/DubininDmitry/Obuntu-theme-for-Obsidian/HEAD/theme.css
 BASE_THEME=dark
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=true
-dgShowLocalGraph=false
+dgShowLocalGraph=true
 dgShowInlineTitle=true
 dgShowFileTree=true
 dgEnableSearch=true
